CHANGE LOG
------------------------------------------------------

Changes from 2.051 (build 20150930) onwards
2015-10-01 Fixed issue: date and time picker are not translated - Mod of commit on 2015-09-02 by Shnoulle
2015-10-01 Extension of commit on date_max and date_min on 2015-09-07 by Shnoulle
2015-10-01 Part of commit: Fixed issue #9872: PostgreSQL database integrity check fails
2015-10-01 Fixed issue #09863: plain text email setting doesn't properly affect admin notification email (Denis Chenu @ Shnoulle)

Changes from 2.05+ (unreleased build 20150606) to 2.051 (build 20150930)
2015-09-30 Build 20150930: All limesurvey project site links to open in new window
2015-09-29 Fixed issue #09926: Cannot save dropdown values in CPD since table has 2 primary keys (KRav007)
2015-09-28 Fixed issue #09917: Error when updating a label set name containing a simple quote (Denis Chenu @ Shnoulle)
2015-09-28 Fixed issue : licence date
2015-09-27 Fixed issue #09906: Invalid survey is set finished in response table with index complete (Denis Chenu @ Shnoulle)
2015-09-27 Fixed issue #09919: Partial reversion (Denis Chenu @ Shnoulle)
2015-09-25 Fixed issue #09919: LSRC2 export return partial answer if language code is invalid (Denis Chenu @ Shnoulle)
2015-09-22 POST variable cleanup in tokens.php
2015-09-18 Build 20150918: Admin footer cleanup, Changelog.txt added, Version and build display in login footer
2015-09-17 Bug #8446 fixed. Forum topic https://www.limesurvey.org/en/forum/can-i-do-this-with-limesurvey/95421-bug-in-second-language-need-help-we-must-go-online-soon
2015-09-17 Set version to 2.051 in new branch

Changes from 2.05+ (build 150520) to 2.05+ (unreleased build 20150606) just before merge of v2.06 into the master branch
2015-06-06 Dev: fixed PHP notice $clang (always) Dev: Polish (Informal) is pl-informal
2015-06-04 Fixed issue #08554: Hover over answers no longer showing value
2015-06-04 Fixed issue #09660: Outdated title and broken title in Array question type