@@ -2,6 +2,7 @@ CHANGE LOG
 ------------------------------------------------------
 
 Changes from 2.051 (build 20150930) onwards
+2015-10-01 Fixed issue #09899: HTML editor launched even for email set to text by Shnoulle
 2015-10-01 Fixed issue: date and time picker are not translated - Mod of commit on 2015-09-02 by Shnoulle
 2015-10-01 Extension of commit on date_max and date_min on 2015-09-07 by Shnoulle
 2015-10-01 Part of commit: Fixed issue #9872: PostgreSQL database integrity check fails
